# liboptispeech

./: .gitignore  Cargo.toml  README.md
audio-ops/: Cargo.toml
audio-ops/src/: lib.rs  samples.rs
optispeech/: Cargo.toml  data.json
optispeech/model/: meta.json
optispeech/src/: lib.rs
ospeak/: Cargo.toml
ospeak/src/: main.rs
src/: lib.rs
