[package]
name = "optispeech"
version = "0.3.0"
edition = "2021"
description = "Neural Text-to-speech model optimized for quality and efficiency"
license = "MIT"
repository = "https://github.com/mush42/liboptispeech"
documentation = "https://github.com/mush42/liboptispeech"
keywords = [ "tts", "speech", "nlp" , "ml"]
categories = [ "algorithms", "science", "media",]
authors = ["Musharraf Omer <ibnomer2011@hotmail.com>"]

[dependencies]
audio-ops = { path="../audio-ops", version="*" }
anyhow = "1.0.86"
mimalloc = "0.1.43"
candle-core = { git = "https://github.com/KimHenrikOtte/candle.git", branch = "wgpu_test", version = "0.6.1", features = ["wgpu"] }
candle-nn = { git = "https://github.com/KimHenrikOtte/candle.git", branch = "wgpu_test", version = "0.6.1", features = ["wgpu"] }

